update, nexttime -> fix cards overflow

--- a/styles/components.css
+++ b/styles/components.css
@@ -107,3 +107,23 @@
   border: 2px solid var(--red, #FF4605);
   color: var(--red, #FF4605);
 }
+
+/*Cards*/
+
+.card--skills {
+  display: inline-block;
+  text-align: center;
+  border-radius: .5em;
+  box-shadow: 0 6px 30px rgb(168, 168, 168);
+  overflow: hidden; /*fix-text*/
+}
+
+.card-figure--fix {
+  margin: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.card--p {
+  font-size: 1.5em;
+}
